objects/ffr__ReportingFilter__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingfilterdefinition</customHelpPage>
    <fields>
        <fullName>ffr__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingObject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting Object</label>
        <referenceTo>ffr__ReportingObject__c</referenceTo>
        <relationshipLabel>Reporting Filters</relationshipLabel>
        <relationshipName>ReportingFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__UniqueName__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffr__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Reporting Filter</label>
    <listViews>
        <fullName>ffr__Accounting_Chart_of_Accounts</fullName>
        <columns>NAME</columns>
        <columns>ffr__UniqueName__c</columns>
        <columns>ffr__ReportingObject__c</columns>
        <columns>ffr__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffr__UniqueName__c</field>
            <operation>startsWith</operation>
            <value>CA</value>
        </filters>
        <label>Accounting - Chart of Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffr__Accounting_Global</fullName>
        <columns>NAME</columns>
        <columns>ffr__UniqueName__c</columns>
        <columns>ffr__ReportingObject__c</columns>
        <columns>ffr__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffr__UniqueName__c</field>
            <operation>startsWith</operation>
            <value>AA</value>
        </filters>
        <label>Accounting - Global</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffr__Accounting_Installation</fullName>
        <columns>NAME</columns>
        <columns>ffr__UniqueName__c</columns>
        <columns>ffr__ReportingObject__c</columns>
        <columns>ffr__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffr__UniqueName__c</field>
            <operation>startsWith</operation>
            <value>IA</value>
        </filters>
        <label>Accounting - Installation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffr__Accounting_Time</fullName>
        <columns>NAME</columns>
        <columns>ffr__UniqueName__c</columns>
        <columns>ffr__ReportingObject__c</columns>
        <columns>ffr__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffr__UniqueName__c</field>
            <operation>startsWith</operation>
            <value>TA</value>
        </filters>
        <label>Accounting - Time</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ffr__All</fullName>
        <columns>NAME</columns>
        <columns>ffr__UniqueName__c</columns>
        <columns>ffr__ReportingObject__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reporting Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>